<resources>
    <string name="app_name">Schemester</string>
    <string name="title_dayschedule_list">Full Schedule</string>
    <string name="title_dayschedule_detail">Day Schedule Details</string>
    <string name="new_period_notification_title_template" translatable="false">New period: %1$s</string>
    <string name="okay">Okay</string>
    <string name="channel_name" translatable="false">New period notification</string>
    <string name="channel_description" translatable="false">To notify about next class.</string>
    <string-array name="hh_mm_ss_array">
        <item>08:30:00</item>
        <item>09:30:00</item>
        <item>10:30:00</item>
        <item>11:30:00</item>
        <item>12:30:00</item>
        <item >13:30:00</item>
        <item>14:30:00</item>
        <item>15:30:00</item>
        <item>16:30:00</item>
        <item>17:30:00</item>
    </string-array>
    <string-array name="periods_24">
        <item>08:30 to 09:30</item>
        <item>09:30 to 10:30</item>
        <item>10:30 to 11:30</item>
        <item>11:30 to 12:30</item>
        <item>12:30 to 13:30</item>
        <item>13:30 to 14:30</item>
        <item>14:30 to 15:30</item>
        <item>15:30 to 16:30</item>
        <item>16:30 to 17:30</item>
    </string-array>
    <string-array name="periods_12">
        <item>8:30 am to 9:30 am</item>
        <item>9:30 am to 10:30 am</item>
        <item>10:30 am to 11:30 am</item>
        <item>11:30 am to 12:30 pm</item>
        <item>12:30 pm to 1:30 pm</item>
        <item>1:30 pm to 2:30 pm</item>
        <item>2:30 pm to 3:30 pm</item>
        <item>3:30 pm to 4:30 pm</item>
        <item>4:30 pm to 5:30 pm</item>
    </string-array>
    <string-array name="weekday_key">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="weekdays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="weekdays_trimmed">
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="period_key_array">
        <item>p1</item>
        <item>p2</item>
        <item>p3</item>
        <item>p4</item>
        <item>p5</item>
        <item>p6</item>
        <item>p7</item>
        <item>p8</item>
        <item>p9</item>
    </string-array>
    <string name="send">Send</string>
    <string name="valid">Valid</string>
    <string name="invalidtext">Invalid till now</string>
    <string name="not_verified">Not verified</string>
    <string name="loading">Loading.</string>
    <string name="semester">Semester</string>
    <string name="weekday" translatable="false">WeekDay</string>
    <string name="month">Month</string>
    <string name="_0" translatable="false">0</string>
    <string name="duration">Duration</string>
    <string name="view_full_week_schedule">Full week schedule</string>
    <string name="no_classes_today_enjoy">No classes today.\nEnjoy!</string>
    <string name="class_">Class</string>
    <string name="delete_account">Delete Account</string>
    <string name="setting_background" translatable="false">setting background</string>
    <string name="app_version" translatable="false">version-1.2-infant-stage2</string>
    <string name="version">Version</string>
    <string name="roll_number">Roll number</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="major_settings">Major settings</string>
    <string name="type_here">Type here</string>
    <string name="submit">Submit</string>
    <string name="info_button" translatable="false">info button</string>
    <string name="setting_button" translatable="false">setting button</string>
    <string name="update_check_button" translatable="false">update check button</string>
    <string name="open_settings_button" translatable="false">Open settings button</string>
    <string name="verification_required">Verification required</string>
    <string name="email_id">Email ID</string>
    <string name="ddmmyyyy">DDMMYYYY</string>
    <string name="proceed">Proceed</string>
    <string name="cancel">Cancel</string>
    <string name="selected_choice_preview" translatable="false">selected choice preview</string>
    <string name="choose_a_theme">Choose a theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="save">Save</string>
    <string name="just_a_moment">Just a moment</string>
    <string name="downloading_latest_version">Downloading latest version</string>
    <string name="of_0_mb" translatable="false">of 0 MB</string>
    <string name="_0_percent" translatable="false">0%</string>
    <string name="confirm">Confirm</string>
    <string name="settings">Settings</string>
    <string name="full_week_schedule">Full week schedule</string>
    <string name="drawer_indicator" translatable="false">Drawer indicator</string>
    <string name="full_schedule_image" translatable="false">full schedule image</string>
    <string name="change_email_id">Change email ID</string>
    <string name="developer_options">Developer options</string>
    <string name="try_restarting_if_there_s_any_glitch">Try restarting if there\'s any glitch.</string>
    <string name="restart_application">Restart application</string>
    <string name="check_for_app_updates">Check for app updates.</string>
    <string name="app_update">App update</string>
    <string name="_24" translatable="false">24</string>
    <string name="_12" translatable="false">12</string>
    <string name="switch_time_format_in_the_app">Switch time format in the app.</string>
    <string name="time_format_24_hours">Time format : 24 hours</string>
    <string name="time_format_12_hours">Time format : 12 hours</string>
    <string name="try_new_themes_including_dark_theme">Try new themes, including dark theme!</string>
    <string name="theme_setup">Theme setup</string>
    <string name="delete_your_account_permanently">Delete your account permanently.</string>
    <string name="request_date_of_birth_update">Request date of birth update.</string>
    <string name="date_of_birth_update">Date of birth update</string>
    <string name="change_roll_number_here">Change roll number here.</string>
    <string name="change_roll_number">Change roll number</string>
    <string name="account_options">Account Options</string>
    <string name="feedback_query_problems_need_new_features_tell_us">Feedback? Query? Problems? Need new features? Tell us.</string>
    <string name="contact_developers">Contact developers</string>
    <string name="app_options">App Options</string>
    <string name="what_defines_you_better">What \ndefines you \nbetter?</string>
    <string name="i_m_a_teacher">I\'m a teacher</string>
    <string name="or">Or</string>
    <string name="i_m_a_student">I\'m a student</string>
    <string name="fill_up_your_credentials">Fill up\nyour\ncredentials.</string>
    <string name="done">Done</string>
    <string name="today">Today</string>
    <string name="theme_changer" translatable="false">theme changer</string>
    <string name="course">Course</string>
    <string name="college">College</string>
    <string name="year">Year</string>
    <string name="dbc_du">Deshbandhu College</string>
    <string name="phy_h" translatable="false">Physics Honours</string>
    <string name="second">Second</string>
    <string name="n_a" translatable="false">N/A</string>
    <string name="anonymous">Anonymous</string>
    <string name="returning_as">Returning as</string>
    <string name="return_as_user_message">" will allow you to access the forbidden features requiring non-anonymous user like messaging,         account settings, and many others.  This will make you no longer anonymous, and normal data collection will resume as is.  "</string>
    <string name="continue_as">Continuing as </string>
    <string name="continue_as_user_message">" will ensure that no data is being collected while you remain anonymous in the app.           However, this will disable the features which require user to be identified, such as messaging, sending notifications, changing account settings, and many others.           Basic functionality of this app will continue to work as is.  "</string>
    <string name="internet_error">For latest details, connect to internet</string>
    <string name="back">Back</string>
    <string name="some_crucial_information">Some crucial information.</string>
    <string name="other">Other</string>
    <string name="update_source">Update source</string>
    <string name="use_this_to_update_your_college_course_or_year">Use this to update your college, course or year.</string>
    <string name="ranjanistic_github" translatable="false">https://www.github.com/ranjanistic</string>
    <string name="darkmodelabs_github" translatable="false">https://www.github.com/darkmodelabs</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="college_roll_number">College Roll Number</string>
    <string name="forgot">Forgot?</string>
    <string name="course_studying">Course studying</string>
    <string name="the_crucial_detailing">The\nCrucial\nDetailing.</string>
    <string name="in_association_with">In association with</string>
    <string name="stay_tuned_for_exciting_updates">Stay tuned for exciting updates!</string>
    <string name="update_available">Update available</string>
    <string name="storage_permit_required">Storage permission required</string>
    <string name="storage_permit_request_text">To download and save the latest version on your device, we need your storage permission. Confirm?</string>
    <string name="an_update_is_available">An update is available</string>
    <string name="update_persuade_text">\nUpdate to get the latest features and bug fixes. Download will start automatically.</string>
    <string name="confirm_to_download">\nConfirm to download?</string>
    <string name="your_app_ver_colon">Your app version :</string>
    <string name="new_ver_colon">\nNew Version :</string>
    <string name="download_interrupted">Download interrupted</string>
    <string name="download_completed">Download completed</string>
    <string name="unable_to_read">Unable to read</string>
    <string name="one_second_before_new_day" translatable="false">23:59:59</string>
    <string name="zero_seconds_after_new_day" translatable="false">00:00:00</string>
    <string name="time_pattern_hhmmss" translatable="false">HH:mm:ss</string>
    <string name="checking">Checking</string>
    <string name="email_not_verified">Email not verified</string>
    <string name="under_construction_message">Under Construction, will be available soon!</string>
    <string name="confirmation_email_sent_text">A confirmation email is sent to your email address</string>
    <string name="result_button" translatable="false">Result button</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="results">Results</string>
    <string name="schedule">Schedule</string>
    <string name="refresh">Refresh</string>
</resources>