<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_drawer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/toproundview"
    android:backgroundTint="?attr/group_card_color"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:targetApi="q">

    <LinearLayout
        android:id="@+id/drawerarrowHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/switchThemeMain"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_suniconsmall"
            android:contentDescription="@string/choose_a_theme" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/present_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableTop="@drawable/drawer_slider"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/n_a"
            android:textAllCaps="false"
            android:textColor="?attr/base_text_color"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/drawerarrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_halfarrow"
            android:backgroundTint="@color/blue"
            android:contentDescription="@string/drawer_indicator"
            android:rotation="90" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fullScheduleTab"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/square_round_btn"
        android:backgroundTint="?attr/tabular_buttons"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toStartOf="@+id/resultTab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/drawerarrowHolder">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/full_schedule_image"
            app:srcCompat="@drawable/ic_menuactionicon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/schedule"
            android:textAlignment="center"
            android:textColor="?attr/base_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultTab"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/square_round_btn"
        android:backgroundTint="?attr/tabular_buttons"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@id/settingTab"
        app:layout_constraintStart_toStartOf="@id/fullScheduleTab"
        app:layout_constraintTop_toBottomOf="@id/drawerarrowHolder">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/result_button"
            app:srcCompat="@drawable/ic_marksheeticonforschemester" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/results"
            android:textColor="?attr/base_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settingTab"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/square_round_btn"
        android:backgroundTint="?attr/tabular_buttons"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resultTab"
        app:layout_constraintTop_toBottomOf="@id/drawerarrowHolder">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/open_settings_button"
            app:srcCompat="@drawable/ic_settingico_mini" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="?attr/base_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/refreshTab"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/square_round_btn"
        android:backgroundTint="?attr/tabular_buttons"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultTab">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/open_settings_button"
            app:srcCompat="@drawable/ic_restarticon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh"
            android:textColor="?attr/base_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refreshTab">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="false"
            android:text="@string/logged_in_as"
            android:textColor="?attr/base_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/drawerLoginID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:singleLine="false"
            android:text="@string/n_a"
            android:textColor="?attr/action_text_color"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>