<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/roundcontainerbox"
    android:backgroundTint="?attr/display_foreground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp"
    tools:targetApi="q">

    <TextView
        android:id="@+id/loadingcaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/downloading_latest_version"
        android:textColor="?attr/foreground_text_color"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/downloadProgress"
        style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:indeterminateOnly="false"
        android:indeterminateTint="@color/green"
        android:max="100"
        android:progressBackgroundTint="@color/dull_white"
        android:progressTint="@color/white"
        android:secondaryProgressTint="@color/green" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/percentCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/_0_percent"
            android:textColor="?attr/foreground_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/appSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/of_0_mb"
            android:textColor="?attr/foreground_text_color"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/cancelDownload"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="12dp"
        android:background="@drawable/square_round_btn"
        android:backgroundTint="?attr/neutral_button_color"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="?attr/button_text_color"
        android:textStyle="bold" />
</LinearLayout>