<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="0dp"
    android:layout_marginEnd="0dp"
    android:background="@drawable/roundcontainerbox"
    android:backgroundTint="?attr/base_background"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    tools:targetApi="q">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cred_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="30dp"
                android:padding="12dp"
                android:text="@string/verification_required"
                android:textColor="?attr/base_text_color"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cred_credview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:gravity="center"
                android:padding="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="?attr/display_foreground">

                <EditText
                    android:id="@+id/cred_email"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="4dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/blue"
                    android:hint="@string/email_id"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@id/cred_pass"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:singleLine="true"
                    android:textColor="?attr/base_text_color"
                    android:textSize="18sp"
                    tools:targetApi="q" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:gravity="center"
                android:padding="4dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColorHint="?attr/display_foreground">

                <EditText
                    android:id="@+id/cred_pass"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="4dp"
                    android:backgroundTint="@color/blue"
                    android:hint="@string/ddmmyyyy"
                    android:inputType="numberPassword"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="?attr/base_text_color"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="18dp"
            android:orientation="horizontal"
            android:padding="12dp">

            <Button
                android:id="@+id/cred_yes"
                style="?attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:background="@drawable/square_round_btn"
                android:backgroundTint="?attr/warning_button_color"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:text="@string/proceed"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?attr/button_text_color"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cred_no"
                style="?attr/buttonBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@drawable/square_round_btn"
                android:backgroundTint="?attr/neutral_button_color"
                android:clickable="true"
                android:focusable="true"
                android:padding="12dp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?attr/button_text_color"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>